# Angel3D

./: .gitignore  .gitmodules  Angel3D.sln  CMakeLists.txt  LICENSE  README.md  build.cmd  imgui.ini
Angel3D/: Angel3D.vcxproj  Angel3D.vcxproj.filters  CMakeLists.txt
Angel3D/inc/: Angel3D.h  pch.h
Angel3D/inc/Core/: Application.h  BaseWindow.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Log.h  MouseButtonCodes.h
Angel3D/inc/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Angel3D/inc/ImGui/: ImGuiLayer.h
Angel3D/inc/Platform/OpenGL/: OpenGLBuffer.h  OpenGLContext.h  OpenGLRendererAPI.h  OpenGLVertexArray.h
Angel3D/inc/Platform/Windows/: Input.h  Window.h
Angel3D/inc/Renderer/: Buffer.h  GraphicsContext.h  RenderCommand.h  Renderer.h  RendererAPI.h  Shader.h  VertexArray.h
Angel3D/src/: CMakeLists.txt
Angel3D/src/Core/: Application.cpp  CMakeLists.txt  Layer.cpp  LayerStack.cpp  Log.cpp
Angel3D/src/ImGui/: CMakeLists.txt  ImGuiLayer.cpp
Angel3D/src/Platform/: CMakeLists.txt
Angel3D/src/Platform/OpenGL/: CMakeLists.txt  ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLRendererAPI.cpp  OpenGLVertexArray.cpp
Angel3D/src/Platform/Windows/: CMakeLists.txt  Input.cpp  Window.cpp
Angel3D/src/Renderer/: Buffer.cpp  CMakeLists.txt  RenderCommand.cpp  Renderer.cpp  RendererAPI.cpp  Shader.cpp  VertexArray.cpp
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/src/: CMakeLists.txt  Sandbox.cpp
docs/: Doxyfile
tools/: build.py  fixpath.py
tools/scripts/: __init__.py  logging.py
